force-app/main/default/objects/GameQuestStep__c/GameQuestStep__c.object-meta.xml
<CustomObject>
    <label>Game Quest Step</label>
    <nameField>
        <displayFormat>GC-{000000}</displayFormat>
        <label>Game Quest Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Game Quest Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>