force-app/main/default/objects/GameQuestStep__c/fields/GameQuest__c.field-meta.xml
<CustomField>
    <fullName>GameQuest__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Game Quest</label>
    <referenceTo>GameQuest__c</referenceTo>
    <relationshipLabel>Game Quest Steps</relationshipLabel>
    <relationshipName>GameQuestSteps</relationshipName>
    <type>Lookup</type>
</CustomField>