force-app/main/default/objects/GameQuestStep__c/fields/IsLastQuestStep__c.field-meta.xml
<CustomField>
    <fullName>IsLastQuestStep__c</fullName>
    <formula>Sequence__c == GameQuest__r.Steps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Quest Step?</label>
    <type>Checkbox</type>
</CustomField>