force-app/main/default/objects/GameQuestStep__c/fields/TotalMonsterHitPoints__c.field-meta.xml
<CustomField>
    <fullName>TotalMonsterHitPoints__c</fullName>
    <label>Total Monster Hit Points</label>
    <summarizedField>GameQuestStepMonster__c.HitPoints__c</summarizedField>
    <summaryForeignKey>GameQuestStepMonster__c.GameQuestStep__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>